# account

./: README.md  pyproject.toml
account/: admin.py  api.py  apps.py  endpoints.py  forms.py  models.py  serializers.py  urls.py  views.py
account/customtags/: user.py
account/migrations/: 0001_initial.py
account/templates/account/: auth.html  form.delme  header.delme  index.html  page.html
account/templates/account/customtags/: usertoolbar.html
account/templates/account/forms/: login.html  recovery.html  register.html
account/templates/account/mails/: recovery.html
account/templates/account/pages/: recovery.html
teappot_account.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
