[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "teappot-account"
version = "0.1.1"
description = "Teappot Account"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Conway Build & Learn", email = "helloworld@conway.cl" }
]
# Aquí defines las dependencias que el Core necesita para funcionar
dependencies = [
    "google-auth>=2.37.0",
]

[tool.setuptools.packages.find]
# Esto buscará automáticamente las carpetas que contengan un __init__.py
where = ["."]
include = ["account*"] 

[tool.setuptools.package-data]
# IMPORTANTE: Esto asegura que los templates y static del core se incluyan en el paquete
"*" = ["*.html", "*.css", "*.js", "*.png", "*.jpg", "*.json"]